--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <header>
     <h1 class="logo">The Cat Shop</h1>
     <nav>
-      <ul class="navbar">...</ul>
+      <ul class="navbar">
         <li class="nav-item">Home</li>
         <li class="nav-item">Cats</li>
         <li class="nav-item">Products</li>
         <li class="nav-item">About</li>
       </ul>
     </nav>
-    <div>
+  <div class="cats">
       <img src="http://bitmakerlabs.github.io/fed-copycat/images/wallpaper-cat.jpg">
     </div>
   </header>
