--- a/index.html
+++ b/index.html
@@ -12,31 +12,33 @@
     <h1 class="logo">The Cat Shop</h1>
     <nav>
       <ul class="navbar">
-        <li class="nav-item">Home</li>
-        <li class="nav-item">Cats</li>
-        <li class="nav-item">Products</li>
-        <li class="nav-item">About</li>
+        <li class="nav-item"><a href="#home">Home</a></li>
+        <li class="nav-item"><a href="#cats">Cats</a></li>
+        <li class="nav-item"><a href="#products">Products</a></li>
+        <li class="nav-item"><a href="#about">About</a></li>
       </ul>
     </nav>
-  <div class="cats">
-      <img src="http://bitmakerlabs.github.io/fed-copycat/images/wallpaper-cat.jpg">
-    </div>
   </header>
 
-  <main class="container"...</main>
-    <section id="home" class="hero">...</section>
-    <section id="cats" class="call-to-action">...</section>
-      <h1>Cats</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-        sed do eiusmod tempor incididunt ut labore et dolore magna
-        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-        ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit
-        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia
-        deserunt mollit anim id est laborum.
-      </p>
-    <section id="products" class="products">...</section>
+  <main class="container">
+    <section id="home" class="hero"></section>
+    <section id="cats" class="call-to-action">
+      <div class="cats-image">
+        <img src="http://bitmakerlabs.github.io/fed-copycat/images/wallpaper-cat.jpg">
+      </div>
+      <div class="cats-content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+          sed do eiusmod tempor incididunt ut labore et dolore magna
+          aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+          ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit
+          esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+          occaecat cupidatat non proident, sunt in culpa qui officia
+          deserunt mollit anim id est laborum.
+        </p>
+      </div>
+    </section>
+    <section id="products" class="products">
       <h1>Products</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
         sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -52,6 +54,7 @@
         <img src="http://bitmakerlabs.github.io/fed-copycat/images/dance-cats.gif">
         <img src="http://bitmakerlabs.github.io/fed-copycat/images/icecream-cat.gif">
         <img src="http://bitmakerlabs.github.io/fed-copycat/images/eat-cats.jpg">
+    </section>
     <section id="about" class="about">...</section>
   </main>
   <footer>© Meow 2016</footer>
